# core

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  vix.json
cmake/: softadastra_coreConfig.cmake.in
docs/: overview.md
include/softadastra/core/: Core.hpp
include/softadastra/core/config/: Config.hpp  ConfigValidator.hpp  ConfigValue.hpp
include/softadastra/core/errors/: Error.hpp  ErrorCode.hpp  ErrorContext.hpp  Severity.hpp
include/softadastra/core/hash/: Hash.hpp  HashAlgorithm.hpp  Hasher.hpp
include/softadastra/core/ids/: DeviceId.hpp  FileId.hpp  Id.hpp  OperationId.hpp
include/softadastra/core/time/: Clock.hpp  Duration.hpp  Timestamp.hpp
include/softadastra/core/types/: NonCopyable.hpp  Result.hpp  StrongType.hpp
include/softadastra/core/utils/: Assert.hpp  ScopeGuard.hpp  StringUtils.hpp
src/config/: Config.cpp  ConfigValidator.cpp  ConfigValue.cpp
src/errors/: Error.cpp  ErrorCode.cpp  ErrorContext.cpp  Severity.cpp
src/hash/: Hash.cpp  HashAlgorithm.cpp  Hasher.cpp
src/ids/: DeviceId.cpp  FileId.cpp  Id.cpp  OperationId.cpp
src/time/: Clock.cpp  Duration.cpp  Timestamp.cpp
tests/: CMakeLists.txt  test_errors.cpp  test_hash.cpp  test_ids.cpp  test_time.cpp
